# rat_logger

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README_en.md  README_ja.md  performance_analysis.md
.skill/: SKILL.md
docs/: 全局日志器宏调试问题分析.md
examples/: README.md  basic_usage.rs  color_format_example.rs  composite_handler.rs  config_validation_test.rs  custom_format.rs  direct_test.rs  env_log_example.rs  file_format_example.rs  file_rotation.rs  filtered_logging.rs  fmt_quick_init.rs  force_output_macro_test.rs  force_output_standard_test.rs  force_output_test.rs  format_example.rs  global_only_test.rs  macro_example.rs  macro_format_example.rs  multi_handler.rs  new_features_test.rs  pm2_style_logging.rs  simple_test.rs  sync_async_demo.rs  term_format_example.rs  test_async.rs  test_file_term.rs  test_fmt_debug.rs  test_fmt_deep.rs  test_fmt_final.rs  test_fmt_simple.rs  test_global_logger.rs  test_idle_cpu.rs  test_sync.rs  test_timing.rs  test_truly_idle.rs  test_with_logs.rs  type_test.rs
src/: core.rs  fmt_impl.rs  lib.rs  producer_consumer.rs  udp_helper.rs
src/config/: mod.rs
src/handler/: composite.rs  file.rs  mod.rs  term.rs  udp.rs
test_logs_debug/: app_20250923_125424.log.lz4  app_20250923_125425.log.lz4
tests/: level_logging_test.rs  performance_comparison.rs  simple_test.rs
