[package]
name = "rat_logger"
version = "0.3.0"
edition = "2024"
authors = ["0ldm0s <oldmos@gmail.com>"]
description = "具有生产者消费者架构、异步文件操作和分层配置系统的高性能日志库"
license = "LGPL-3.0"
repository = "https://github.com/0ldm0s/rat_logger"
homepage = "https://github.com/0ldm0s/rat_logger"
documentation = "https://docs.rs/rat_logger"
readme = "README.md"
keywords = ["logging", "logger", "async", "performance", "file"]
categories = ["development-tools::debugging", "asynchronous"]

[dependencies]
chrono = "0.4.41"
crossbeam = "0.8"
crossbeam-channel = "0.5"
lz4 = "1.28.1"
once_cell = "1.18"
parking_lot = "0.12.4"
threadpool = "1.8.1"
tokio = { version = "1.0", features = ["full"] }
bincode = { version = "2.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
futures = "0.3.31"
arc-swap = "1.7.1"
rand = "0.8"
dashmap = "6.1.0"
lazy_static = "1.5"
rayon = "1.8"
